--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,10 @@
         <ul>
             <li><a id="mail" href="mailto:{{ site.owner.email }}"><span class="foot-link">Contact Me</span></a></li>
 
+            {% if site.owner.weibo %}
+            <li><a id="twit" href="http://weibo.com/{{ site.owner.weibo }}" target="_blank"><span class="foot-link">@一起骑车吧</span></a></li>
+            {% endif %}
+
             {% if site.owner.twitter %}
             <li><a id="twit" href="http://twitter.com/{{ site.owner.twitter }}" target="_blank"><span class="foot-link">@{{ site.owner.twitter }}</span></a></li>
             {% endif %}
