--- a/_includes/head-dark.html
+++ b/_includes/head-dark.html
@@ -49,6 +49,7 @@
 <div id="bump">
   <body class="">
     <header class="site-header darken">
+			<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
       <div class="wrap">
         <hgroup>
           <h1><a href="/">{{ site.title }}</a></h1>
