--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,7 @@
 
       <article class="wrap post">
         <header class="post-header">
+					<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
           <hgroup>
             <h1>{{page.title}}</h1>
             <p class="date">{{page.date | date: "%b %d, %Y" }}</p>
