--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,6 +51,7 @@
 <div id="bump">
   <body class="">
     <header class="site-header">
+			<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
       <div class="wrap">
         <hgroup>
           <h1><a href="/">{{ site.title }}</a></h1>
