--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,6 +16,7 @@
 
       <article class="wrap post">
         <header class="post-header">
+					<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
           <hgroup>
             <h1>{{ page.title }}</h1>
             <p class="intro">{% if page.description %}{{ page.description }}{% else %}{{ page.tagline }}{% endif %}</p>
